Read master preferences before create variations to allow to migrate variations from master preferences to Local State

Change-Id: I25cca8a8265e2fae57d5d0a13b053e577a9bba11

Bug: 907434
Change-Id: I25cca8a8265e2fae57d5d0a13b053e577a9bba11
Reviewed-on: https://chromium-review.googlesource.com/c/1344097
Commit-Queue: Alexei Svitkine <asvitkine@chromium.org>
Reviewed-by: Jochen Eisinger <jochen@chromium.org>
Reviewed-by: Alexei Svitkine <asvitkine@chromium.org>
Cr-Commit-Position: refs/heads/master@{#610635}
Former-commit-id: 18483d6acf26f1c21194b3425013902166b51dd4